fix button " commander" overflow
in menu pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -463,7 +463,7 @@ html {
   position: absolute;
   left: -12px;
   bottom: 21px;
-  background-color: #9356DC;
+  background-color: #9356dc;
   border-radius: 20px;
   height: 24px;
   width: 24px;
@@ -602,7 +602,7 @@ html {
 
 .new::after {
   display: block;
-  content: 'Nouveau';
+  content: "Nouveau";
   color: #278870;
   position: absolute;
   top: 14px;
@@ -673,6 +673,7 @@ header button {
 
 @media screen and (min-width: 961px) {
   .header-img {
+    padding-bottom: 80px;
     position: sticky;
     top: 20px;
     width: 50%;
@@ -767,7 +768,7 @@ header button {
   display: block;
   padding-top: 4px;
   border-bottom: 3px solid #99E2D0;
-  content: '';
+  content: "";
   width: 40px;
 }
 
